underlining, color scheme and others

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <!-- Fill content with the URL of this portfolio you'll host -->
-    <meta property="og:url" content="https://yoonlee.github.io" />
+    <meta property="og:url" content="https://overtheexit.github.io/yoonlee/" />
     <!-- Fill content with the title of your portfolio(Recommended to use what you put in <title> tag) -->
     <meta property="og:title" content="Yoon Lee | overtheexit" />
     <!-- Give a short description that'll show up when you/someone shares your portfolio on different platform -->
@@ -34,24 +34,24 @@
       so that a thumbnail image of your portfolio is shown while shared on other platform -->
     <meta
       property="og:image"
-      content="https://devfolio.js.org/assets/devfolio.png"
+      content="https://overtheexit.github.io/yoonlee/assets/OpenseaArt.avif"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <!-- Again fill content attr with the URL of this portfolio you'll host -->
-    <meta property="twitter:url" content="https://devfolio.js.org" />
+    <meta property="twitter:url" content="https://overtheexit.github.io/yoonlee/" />
     <!-- Recommended to use the same text used within <title> element -->
-    <meta property="twitter:title" content="[Your name here] | Developer" />
+    <meta property="twitter:title" content="overtheexit | Data Scientist" />
     <!-- short description that shows up while your portfolio is shared -->
     <meta
       property="twitter:description"
-      content="Made using DevFolio Template"
+      content="Yoon Lee's portfolio website"
     />
     <!-- Fill content with the URL to the thumbnail image that you'll put in the assets folder -->
     <meta
       property="twitter:image"
-      content="https://anilseervi.vercel.app/assets/devfolio.png"
+      content="https://overtheexit.github.io/yoonlee/assets/OpenseaArt.avif"
     />
 
     <!-- link tags -->
@@ -117,7 +117,7 @@
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/YoonLee Small.jpeg"
+              src="./assets/YoonLee22.jpeg"
               alt="Profile Image"
               width="450"
               height="350"
@@ -162,18 +162,18 @@
           <div id="experience-details">
             <!-- EY Blockchain Experience -->
             <div class="experience-detail active" id="experience-0">
-              <h3>Technology Consultanting intern @ EY Blockchain</h3>
+              <h3>Technology Consultanting intern @ <a class="company-name" href="https://blockchain.ey.com">EY Blockchain</a></h3>
               <p>Jun 2023 - Aug 2023</p>
               <ul>
-                <li>Analyzed and optimized blockchain solutions for financial services.</li>
-                <li>Developed data-driven insights and visualizations for blockchain performance metrics.</li>
-                <li>Collaborated with cross-functional teams to integrate blockchain technology into existing systems.</li>
+                <li><b>Directed</b> comprehensive analysis of blockchain protocols, enhancing financial traceability and transparency for an NGO’s fund disbursement system, <b>reducing untraceable transactions by 30%</b>.</li>
+                <li><b>Developed</b> data-driven insights and visualizations for blockchain performance metrics.</li>
+                <li><b>Collaborated</b> with cross-functional teams to integrate blockchain technology into existing systems.</li>
                 <li>Contributed to the development of blockchain-based smart contracts and decentralized applications.</li>
               </ul>
             </div>
             <!-- EY Seoul Experience -->
             <div class="experience-detail" id="experience-1">
-              <h3>Digital Technology Consulting Intern @ EY Seoul</h3>
+              <h3>Digital Technology Consulting Intern @ <a class="company-name" href="https://www.ey.com/ko_kr/digital">EY Seoul</a></h3>
               <p>Jun 2022 - Aug 2022</p>
               <ul>
                 <li>Conducted market research and analysis for emerging blockchain technologies.</li>
@@ -184,7 +184,7 @@
             </div>
             <!-- CNI Lab @ KAIST Experience -->
             <div class="experience-detail" id="experience-2">
-              <h3>Research Assistant @ CNI Lab, KAIST</h3>
+              <h3>Research Assistant @ <a class="company-name" href="https://ibrain.kaist.ac.kr/">CNI Lab, KAIST</a></h3>
               <p>Oct 2019 - Nov 2019</p>
               <ul>
                 <li>Researched and developed algorithms for network optimization and blockchain integration.</li>
@@ -210,30 +210,31 @@
             <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">Data Scientist Salary Insight</h3>
               <p class="project-wrapper__text-info">
-                Wrote <b>R script</b> and deployed it with Shinny App. 
+                Wrote <a href="https://github.com/overtheexit/DataScientist_Insights" class="project-link"><b>R Script</b></a>
+                and deployed it with <a href="https://overtheexit.shinyapps.io/datascientist_insights/" class="project-link"><b>R Script</b></a>. 
                 <b>Tidyverse</b> was heavily used to wrangle and visualize the salary data obtained from Kaggle.
                 The app generates bar chart that depicts how much each technical skills are required by the given condition of data science jobs
                 like salary range or Industry Sector. 
               </p>
-              <!-- <div class="project-wrapper__text-btns">
+              <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://overtheexit.shinyapps.io/datascientist_insights/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a href="https://github.com/overtheexit/DataScientist_Insights" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
-              </div> -->
+              </div>
             </div>
 
             <div class="project-wrapper__image">
-              <a href="https://www.ey.com/ko_kr/digital" target="_blank" rel="noopener noreferrer">
+              <a href="https://github.com/overtheexit/DataScientist_Insights" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/EYKoreaLogo.jpeg"
+                    src="./assets/DataScientist_insight.png"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -250,21 +251,63 @@
             <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">Game Sales Data visualization</h3>
               <p class="project-wrapper__text-info">
-                Created a data visualization using Tableau that shows game sales by genre and time, 
+                Created a data visualization using <a href="https://public.tableau.com/views/GamesSalesDashboard_16860650207060/DashboardProject-CS416?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link" class="project-link"><b>Tableau</b></a> that shows game sales by genre and time, 
                 top 10 game name by sales, and top 10 gaming platforms by sales.
                 Utilized area chart, bar chart, and bubble plot.
               </p>
+              <!-- <div class='tableauPlaceholder' id='viz1719292992799' style='position: relative'>
+                <noscript>
+                  <a href='#'>
+                    <img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GamesSalesDashboard_16860650207060&#47;DashboardProject-CS416&#47;1_rss.png' style='border: none' />
+                  </a>
+                </noscript>
+                <object class='tableauViz'  style='display:none;'>
+                  <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+                  <param name='embed_code_version' value='3' /> 
+                  <param name='site_root' value='' /><param name='name' value='GamesSalesDashboard_16860650207060&#47;DashboardProject-CS416' />
+                  <param name='tabs' value='yes' />
+                  <param name='toolbar' value='yes' />
+                  <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ga&#47;GamesSalesDashboard_16860650207060&#47;DashboardProject-CS416&#47;1.png' /> 
+                  <param name='animate_transition' value='yes' />
+                  <param name='display_static_image' value='yes' />
+                  <param name='display_spinner' value='yes' />
+                  <param name='display_overlay' value='yes' />
+                  <param name='display_count' value='yes' />
+                  <param name='language' value='en-US' />
+                </object>
+              </div>                
+              <script type='text/javascript'>                    
+                var divElement = document.getElementById('viz1719292992799');                    
+                var vizElement = divElement.getElementsByTagName('object')[0];                    
+                if ( divElement.offsetWidth > 800 ) {
+                  vizElement.style.minWidth='1000px';
+                  vizElement.style.maxWidth='100%';
+                  vizElement.style.minHeight='850px';
+                  vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';
+                } else if ( divElement.offsetWidth > 500 ) {
+                  vizElement.style.minWidth='1000px';
+                  vizElement.style.maxWidth='100%';
+                  vizElement.style.minHeight='850px';
+                  vizElement.style.maxHeight=(divElement.offsetWidth*0.75)+'px';
+                } else { 
+                  vizElement.style.width='100%';
+                  vizElement.style.minHeight='900px';
+                  vizElement.style.maxHeight=(divElement.offsetWidth*1.77)+'px';
+                }                     
+                  var scriptElement = document.createElement('script');                    
+                  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+                  vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+                </script> -->
               <div class="project-wrapper__text-btns">
-                <!-- <a
-                  href="#"
+                <a
+                  href="https://public.tableau.com/views/GamesSalesDashboard_16860650207060/DashboardProject-CS416?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
-                  >Research</a
-                > -->
+                  >See Live</a
+                >
                 <!-- <a href="#" target="_blank" class="cta-btn text-color-main"
-                  >Source Code</a
-                > -->
+                  >Source Code</a> -->
               </div>
             </div>
 
@@ -285,24 +328,25 @@
 
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Digital Art</h3>
+              <h3 class="project-wrapper__text-title">NFT Digital Art</h3>
               <p class="project-wrapper__text-info">
-                Mainly Collage by pictures that were taken by me and modified by me!
+                Mainly <b>Collage</b> by pictures that were taken by me and modified by me!
                 I used Photoleap and Canva on my iphone to make this collage.
-                Every pieces that I wanted to publish is on-chain, so feel free to visit my <b href="https://opensea.io/overtheexit">Opensea</b> page!
+                Every pieces that I wanted to publish is on-chain, so feel free to visit my 
+                <a href="https://opensea.io/overtheexit" class="project-link"><b>Opensea</b></a> page!
               </p>
-              <!-- <div class="project-wrapper__text-btns">
+              <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://opensea.io/overtheexit"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
-                  ></a
+                  >Collection</a
                 >
-                 <a href="#" target="_blank" class="cta-btn text-color-main"
+                 <!-- <a href="#" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
-                > 
-              </div> -->
+                >  -->
+              </div>
             </div>
 
             <div class="project-wrapper__image">
@@ -330,7 +374,7 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">Please Feel Free to Reach Out!</p>
+          <p class="contact-wrapper__text">Feel Free to Reach Out!</p>
           <a href="mailto:yoonseo.lee1212@gmail.com" class="cta-btn cta-btn--resume">Email Me!</a>
         </div>
       </div>
