slight detail changes

--- a/index.html
+++ b/index.html
@@ -162,13 +162,12 @@
           <div id="experience-details">
             <!-- EY Blockchain Experience -->
             <div class="experience-detail active" id="experience-0">
-              <h3>Technology Consultanting intern @ <a class="company-name" href="https://blockchain.ey.com">EY Blockchain</a></h3>
+              <h3>Technology Consulting Intern @ <a class="company-name" href="https://blockchain.ey.com">EY Blockchain</a></h3>
               <p>Jun 2023 - Aug 2023</p>
               <ul>
-                <li><b>Directed</b> comprehensive analysis of blockchain protocols, enhancing financial traceability and transparency for an NGO’s fund disbursement system, <b>reducing untraceable transactions by 30%</b>.</li>
-                <li><b>Developed</b> data-driven insights and visualizations for blockchain performance metrics.</li>
-                <li><b>Collaborated</b> with cross-functional teams to integrate blockchain technology into existing systems.</li>
-                <li>Contributed to the development of blockchain-based smart contracts and decentralized applications.</li>
+                <li><b>Directed</b> comprehensive analysis of blockchain protocols, enhancing financial traceability and transparency for an NGO’s fund disbursement system.</li>
+                <li>Developed 10 data visualizations using Tableau to track developer activity and network performance, <b>improving client-facing reporting efficiency by 25%</b>.</li>
+                <li><b>Managed</b> cross-functional teams across business, design, and engineering, driving a <b>15% increase in product adoption</b>.</li>
               </ul>
             </div>
             <!-- EY Seoul Experience -->
@@ -176,21 +175,18 @@
               <h3>Digital Technology Consulting Intern @ <a class="company-name" href="https://www.ey.com/ko_kr/digital">EY Seoul</a></h3>
               <p>Jun 2022 - Aug 2022</p>
               <ul>
-                <li>Conducted market research and analysis for emerging blockchain technologies.</li>
-                <li>Assisted in the development and implementation of blockchain-based solutions for clients.</li>
-                <li>Prepared reports and presentations for client meetings and internal stakeholders.</li>
-                <li>Supported the team in identifying and mitigating risks in blockchain projects.</li>
+                <li>Conducted market research and analysis on global smartphone and wearable markets, providing strategic insights that <b>improved market prediction accuracy by 20%</b> and supported strategic marketing decisions.</li>
+                <li>Analyzed and cleansed over 1 million social media sentiment data points, delivering data-driven insights that <b>increased client engagement metrics by 25%</b>.</li>
+                <li>Automated data extraction and cleansing processes using SQL, enhancing data processing efficiency by <b>35%</b> and reducing manual labor by <b>40%</b>.</li>
               </ul>
             </div>
             <!-- CNI Lab @ KAIST Experience -->
             <div class="experience-detail" id="experience-2">
               <h3>Research Assistant @ <a class="company-name" href="https://ibrain.kaist.ac.kr/">CNI Lab, KAIST</a></h3>
-              <p>Oct 2019 - Nov 2019</p>
+              <p>Aug 2019 - Oct 2019</p>
               <ul>
-                <li>Researched and developed algorithms for network optimization and blockchain integration.</li>
-                <li>Collaborated on a project to enhance the security and efficiency of blockchain networks.</li>
-                <li>Published research findings in peer-reviewed journals and presented at academic conferences.</li>
-                <li>Assisted in supervising undergraduate research projects related to blockchain technology.</li>
+                <li>Created 10 weekly presentations on the interpretation of research papers related to network effects in the human brain, <b>improving research discussions and accelerating insight generation by 30%</b>.</li>
+                <li>Compiled comprehensive summaries of academic papers, aiding knowledge transfer and <b>increasing research efficiency by 25%</b> within the laboratory.</li>
               </ul>
             </div>
           </div>
@@ -211,7 +207,7 @@
               <h3 class="project-wrapper__text-title">Data Scientist Salary Insight</h3>
               <p class="project-wrapper__text-info">
                 Wrote <a href="https://github.com/overtheexit/DataScientist_Insights" class="project-link"><b>R Script</b></a>
-                and deployed it with <a href="https://overtheexit.shinyapps.io/datascientist_insights/" class="project-link"><b>R Script</b></a>. 
+                and deployed it with <a href="https://overtheexit.shinyapps.io/datascientist_insights/" class="project-link"><b>shinyApps</b></a>. 
                 <b>Tidyverse</b> was heavily used to wrangle and visualize the salary data obtained from Kaggle.
                 The app generates bar chart that depicts how much each technical skills are required by the given condition of data science jobs
                 like salary range or Industry Sector. 
