fixed path for experience.js

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         </div>
         <hr />
         <p class="footer__text">
-          Made with &hearts; by Yoon Lee
+          Made with &#9749; by <a href="https://github.com/overtheexit">Yoon Lee</a>
         </p>
       </div>
     </footer>
@@ -459,7 +459,7 @@
     <script src="./javascript/vanilla-tilt.min.js"></script>
     <script type="text/javascript" src="./javascript/valtilt.js"></script>
     <!-- <script src="/javascript/modal.js"></script> -->
-    <script src="/javascript/experience.js"></script>
+    <script src="./javascript/experience.js"></script>
   </body>
   
 </html>
