changed my wordings

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <h1 class="hero-title">
           Hi, my name is <span class="text-color-main name">Yoon Lee</span>
           <br />
-          I'm a data scientist who is passionate about blockchain!
+          I'm a data scientist who is passionate about all things tech!
         </h1>
         <p class="hero-cta">
           <a class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/1e5IyIeUQeBXkDKHxbmKYN6_vSFsUm-J1/view?usp=sharing">My Resume</a>
@@ -126,18 +126,14 @@
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
               Welcome to my corner of the web! 
-              I'm Yoon Lee, currently pursuing a Master of Computer Science 
-              at UIUC.
+              I'm Yoon Lee.
             </p>
             <p>
-              With hands-on experience in technology consulting and data analysis 
-              from internships at EY Blockchain and EY Seoul, 
-              I've honed my skills in blockchain analysis, data visualization,
-              and market research. My work includes developing data-driven insights,
-              optimizing administrative processes, and conducting high-impact research.
-            </p>
-            <p>
+              Ranging from ML research to technology consulting, I've had multiple work experiences
+              and now I am searching for a data science role where I can further grow as a tech-oriented individual.
               My technical toolkit includes R, MySQL, Python, Pandas, C++, HTML, CSS, and more.
+            </p>
+            <p>
               Beyond academia and professional life, 
               I enjoy making digital arts, reading books, and caring about personal health!
             </p>
@@ -199,7 +195,7 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Things that I've made</h2>
+          <h2 class="section-title dark-blue-text">Things I've made</h2>
 
           <!-- Each .row is a project -->
           <article class="row">
