created Table of Content

--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
     <!-- End of Google Analytics -->
   </head>
   <body>
+    <!-- Table of Content section -->
+    <nav class="table-of-contents">
+      <ul>
+        <li><a href="#about" data-section="about">About</a></li>
+        <li><a href="#experience" data-section="experience">Experiences</a></li>
+        <li><a href="#projects" data-section="projects">Projects</a></li>
+        <li><a href="#contact" data-section="contact">Contact</a></li>
+      </ul>
+    </nav>
+
     <!-- Hero Section -->
     <div id="hero">
       <section class="container">
@@ -112,7 +122,7 @@
     <!-- About Section -->
     <section id="about">
       <div class="container">
-        <h2 class="section-title">About Me</h2>
+        <h2 class="section-title">About Yoon</h2>
         <div class="row about-wrapper">
           <div class="about-wrapper__image">
             <img
@@ -456,6 +466,7 @@
     <script type="text/javascript" src="./javascript/valtilt.js"></script>
     <!-- <script src="/javascript/modal.js"></script> -->
     <script src="./javascript/experience.js"></script>
+    <script src="./javascript/toc.js"></script>
   </body>
   
 </html>
