--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           I'm a data scientist who is passionate about all things tech!
         </h1>
         <p class="hero-cta">
-          <a class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/1e5IyIeUQeBXkDKHxbmKYN6_vSFsUm-J1/view?usp=sharing">My Resume</a>
+          <a class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/1e5IyIeUQeBXkDKHxbmKYN6_vSFsUm-J1/view?usp=drive_link">My Resume</a>
         </p>
       </section>
       <a href="#about" class="scroll-down-link" aria-label="scroll-down">
@@ -160,14 +160,24 @@
         <div id="experience-container">
           <div id="experience-list">
             <ul>
-              <li class="experience-item active" data-experience="0">EY Blockchain</li>
-              <li class="experience-item" data-experience="1">EY Seoul</li>
-              <li class="experience-item" data-experience="2">CNI Lab @ KAIST</li>
+              <li class="experience-item active" data-experience="0">Management Solutions</li>
+              <li class="experience-item" data-experience="1">EY Blockchain</li>
+              <li class="experience-item" data-experience="2">EY Seoul</li>
             </ul>
           </div>
           <div id="experience-details">
+            <!-- Management Solutions Experience -->
+            <div class="experience-detail" id="experience-0">
+              <h3>Data Science Consultant @ <a class="company-name" href="https://www.managementsolutions.com/en">Management Solutions</a></h3>
+              <p>Sep 2024 - Current</p>
+              <ul>
+                <li><b>Transformed</b> manual processes through Selenium automation, <b>reducing</b> processing times by over <b>80%</b> and dramatically boosting operational efficiency.</li>
+                <li><b>Engineered</b> complex SQL queries to extract critical data from a six-dimensional database, <b>accelerating</b> data retrieval by <b>45%</b> and enhancing data accuracy.</li>
+                <li><b>Strategically engaged</b> with clients and stakeholders, <b>elevating</b> engagement and expediting project timelines by <b>35%</b> through effective communication and streamlined processes.</li>
+              </ul>
+            </div>
             <!-- EY Blockchain Experience -->
-            <div class="experience-detail active" id="experience-0">
+            <div class="experience-detail active" id="experience-1">
               <h3>Technology Consulting Intern @ <a class="company-name" href="https://blockchain.ey.com">EY Blockchain</a></h3>
               <p>Jun 2023 - Aug 2023</p>
               <ul>
@@ -177,22 +187,13 @@
               </ul>
             </div>
             <!-- EY Seoul Experience -->
-            <div class="experience-detail" id="experience-1">
+            <div class="experience-detail" id="experience-2">
               <h3>Digital Technology Consulting Intern @ <a class="company-name" href="https://www.ey.com/ko_kr/digital">EY Seoul</a></h3>
               <p>Jun 2022 - Aug 2022</p>
               <ul>
                 <li>Conducted market research and analysis on global smartphone and wearable markets, providing strategic insights that <b>improved market prediction accuracy by 20%</b> and supported strategic marketing decisions.</li>
                 <li>Analyzed and cleansed over 1 million social media sentiment data points, delivering data-driven insights that <b>increased client engagement metrics by 25%</b>.</li>
                 <li>Automated data extraction and cleansing processes using SQL, enhancing data processing efficiency by <b>35%</b> and reducing manual labor by <b>40%</b>.</li>
-              </ul>
-            </div>
-            <!-- CNI Lab @ KAIST Experience -->
-            <div class="experience-detail" id="experience-2">
-              <h3>Research Assistant @ <a class="company-name" href="https://ibrain.kaist.ac.kr/">CNI Lab, KAIST</a></h3>
-              <p>Aug 2019 - Oct 2019</p>
-              <ul>
-                <li>Created 10 weekly presentations on the interpretation of research papers related to network effects in the human brain, <b>improving research discussions and accelerating insight generation by 30%</b>.</li>
-                <li>Compiled comprehensive summaries of academic papers, aiding knowledge transfer and <b>increasing research efficiency by 25%</b> within the laboratory.</li>
               </ul>
             </div>
           </div>
